<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/button_text"
        android:textColor="@color/orange"/>

    <Button
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_image"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_text"
        android:textColor="@color/pink"/>

    <Button
        android:id="@+id/button_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/button_buttons"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_image"
        android:textColor="@color/yellow"/>

    <LinearLayout
        android:id="@+id/button_listlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_below="@id/button_buttons"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button_list"
            android:textColor="@color/purple"/>

        <Button
            android:id="@+id/button_listStyled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_listStyled"
            android:textColor="@color/purple"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/button_listlayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_grid"
            android:textColor="@color/green"/>

        <Button
            android:id="@+id/button_gridStyled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_gridStyled"
            android:textColor="@color/green"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/button_recycler"
        android:layout_below="@id/button_gridlayout"
        android:textColor="@color/turquesa"/>

    <Button
        android:id="@+id/button_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/button_form"
        android:layout_below="@id/button_recycler"
        android:textColor="@color/blue"/>

    <LinearLayout
        android:id="@+id/button_tabslayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/button_form"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_tabs"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/button_tabsStyled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_tabs"
            android:textColor="@color/red"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/button_custom"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_tabslayout"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_codely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:padding="@dimen/margin_10dp"
        android:text="@string/hola"
        android:visibility="gone"
        android:layout_below="@id/button_custom"
        android:background="@color/codely_green"
        android:textColor="@color/black"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progress_layout"
        android:visibility="gone"
        layout="@layout/progressbar" />

</RelativeLayout>
