<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/choose_option"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tooltipText="@string/choose_option"
        android:orientation="vertical"
        android:layout_below="@id/text">

        <RadioButton
            android:id="@+id/radioCheckA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_A"/>

        <RadioButton
            android:id="@+id/radioCheckB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/option_B"/>

        <RadioButton
            android:id="@+id/radioCheckC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_C"/>

    </RadioGroup>
</RelativeLayout>