<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapWords"
            android:nextFocusDown="@id/lastname"
            android:lines="1"/>

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/lastname"
            android:inputType="textPersonName|textCapWords"
            android:lines="1"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/codigo"
                android:inputType="number"
                android:lines="1"
                android:maxLength="5"
                android:textColorHint="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/conf_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:dropDownSelector="@android:drawable/arrow_down_float"
            android:prompt="@string/hours"/>

        <!--<DatePicker-->
            <!--android:id="@+id/datePicker"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:calendarViewShown="false"-->
            <!--android:datePickerMode="calendar"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|end"
                android:hint="@string/weight"
                android:inputType="number"
                android:lines="1"
                android:maxLength="5"
                android:nextFocusDown="@+id/height"/>

            <EditText
                android:id="@+id/height"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:hint="@string/height"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3" />
        </LinearLayout>

        <Button
            android:id="@+id/conf_saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/button_send"/>

    </LinearLayout>
</ScrollView>


