<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/codely_green"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/title.azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/codely_opinion" />

            <ImageView
                android:id="@+id/image_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@mipmap/codely_0"/>

            <Spinner
                android:id="@+id/conf_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:prompt="@string/codely" />

            <ilia.curso.codely.vistas.custom.ExtendedEditText
                style="@style/textarea"
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/opinion"
                android:layout_marginTop="@dimen/margin_10dp"
                android:inputType="text" />

            <Button
                style="@style/button_codely"
                android:id="@+id/button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:text="@string/button_send" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>


